--- a/file-data-analyzer-ui/src/index.css
+++ b/file-data-analyzer-ui/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Ubuntu-Regular";
+  src: url("assets/fonts/Ubuntu/Ubuntu-Regular.ttf") format("truetype");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
